--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sand Simulation</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
